<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CollectorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/navButtonAlbums"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:text="@string/navButtonAlbums"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textScaleX="0.75"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/navButtonMusicians"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:text="@string/navButtonMusicians"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textScaleX="0.75"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectorsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/collector_item" />

</LinearLayout>