...

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/musicianPortrait"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="5dp"
                    android:contentDescription="@string/image_complement_artist" />

...
